[workspace]
default-members = ["init"]

members = [
    "base/critical",
    "base/error",
    "base/io",
    "base/log",
    "bootloader",
    "init",
    "interrupts",
    "state/global",
    "state/local",
]

[workspace.dependencies]
bootloader = { path = "./bootloader" }
critical = { path = "./base/critical" }
error = { path = "./base/error" }
global_state = { path = "./state/global" }
io = { path = "./base/io" }
interrupts = { path = "./interrupts" }
log = { path = "./base/log" }
local_state = { path = "./state/local" }
