[workspace]
default-members = ["init"]

members = [
    "base/error",
    "base/io",
    "base/log",
    "bootloader",
    "gdt",
    "init",
    "interrupts",
    "state/global",
    "state/local",
]

[workspace.dependencies]
bootloader = { path = "./bootloader" }
error = { path = "./base/error" }
gdt = { path = "./gdt" }
global_state = { path = "./state/global" }
interrupts = { path = "./interrupts" }
io = { path = "./base/io" }
log = { path = "./base/log" }
local_state = { path = "./state/local" }
