[package]
authors = ["Lance Hart <shipsimfan@hotmail.com>"]
edition = "2021"
name = "acpi"
version = "0.1.0"

[lib]
bench = false
crate-type = ["lib"]
doc = false
doctest = false
name = "acpi"
test = false

[dependencies]
base = {path = "../base"}
device = {path = "../device"}
interrupts = {path = "../interrupts"}
memory = {path = "../memory"}
process = {path = "../process"}
