[package]
authors = ["Lance Hart <shipsimfan@hotmail.com>"]
edition = "2021"
name = "acpi"
version = "0.1.0"

[features]
debug_logging = ["namespace_logging", "dsdt_logging"]
namespace_logging = []
dsdt_logging = []

[lib]
bench = false
crate-type = ["lib"]
doc = false
doctest = false
name = "acpi"
test = false

[dependencies]
base = { workspace = true }
