[package]
authors = ["Lance Hart <shipsimfan@hotmail.com>"]
build = "build.rs"
edition = "2021"
name = "init"
version = "0.1.0"

[dependencies]
acpi = {path = "../acpi"}
base = {path = "../base"}
device = {path = "../device"}
filesystem = {path = "../filesystem"}
interrupts = {path = "../interrupts"}
ipc = {path = "../ipc"}
memory = {path = "../memory"}
process = {path = "../process"}
process_types = {path = "../process_types"}
program_loader = {path = "../program_loader"}
sessions = {path = "../sessions"}
system_calls = {path = "../system_calls"}
time = {path = "../time"}

cmos = {path = "../drivers/cmos"}
hpet = {path = "../drivers/hpet"}
ide = {path = "../drivers/ide"}
pci = {path = "../drivers/pci"}
ps2 = {path = "../drivers/ps2"}
uefi = {path = "../drivers/uefi"}

fat32 = {path = "../drivers/fat32"}

[[bin]]
bench = false
doc = false
doctest = false
name = "init"
test = false
