[package]
authors = ["Lance Hart <shipsimfan@hotmail.com>"]
edition = "2021"
name = "init"
version = "0.1.0"

[[bin]]
bench = false
doc = false
doctest = false
name = "init"
test = false

[dependencies]
bootloader = { workspace = true }
gdt = { workspace = true }
local_state = { workspace = true }
global_state = { workspace = true }
