[package]
authors = ["Lance Hart <shipsimfan@hotmail.com>"]
build = "build.rs"
edition = "2021"
name = "kernel"
version = "0.1.0"

[dependencies]
acpi = {path = "../acpi"}
base = {path = "../base"}
device = {path = "../device"}
interrupts = {path = "../interrupts"}
memory = {path = "../memory"}
process = {path = "../process"}
sessions = {path = "../sessions"}
time = {path = "../time"}

hpet = {path = "../drivers/hpet"}
uefi = {path = "../drivers/uefi"}

[[bin]]
bench = false
doc = false
doctest = false
name = "kernel"
test = false
