[package]
authors = ["Lance Hart <shipsimfan@hotmail.com>"]
build = "build.rs"
edition = "2021"
name = "kernel"
version = "0.1.0"

[dependencies]
acpi = {path = "../acpi"}
base = {path = "../base"}
device = {path = "../device"}
filesystem = {path = "../filesystem"}
interrupts = {path = "../interrupts"}
memory = {path = "../memory"}
process = {path = "../process"}
process_types = {path = "../process_types"}
program_loader = {path = "../program_loader"}
sessions = {path = "../sessions"}
time = {path = "../time"}

cmos = {path = "../drivers/cmos"}
hpet = {path = "../drivers/hpet"}
ide = {path = "../drivers/ide"}
pci = {path = "../drivers/pci"}
uefi = {path = "../drivers/uefi"}

fat32 = {path = "../drivers/fat32"}

[[bin]]
bench = false
doc = false
doctest = false
name = "kernel"
test = false
