[package]
authors = ["Lance Hart <shipsimfan@hotmail.com>"]
build = "build.rs"
edition = "2021"
name = "memory"
version = "0.1.0"

[lib]
bench = false
crate-type = ["lib"]
doc = false
doctest = false
name = "memory"
test = false

[dependencies]
base = {path = "../base"}
interrupts = {path = "../interrupts"}
