[package]
authors = ["Lance Hart <shipsimfan@hotmail.com>"]
edition = "2021"
name = "sessions"
version = "0.1.0"

[lib]
bench = false
crate-type = ["lib"]
doc = false
doctest = false
name = "sessions"
test = false

[dependencies]
base = {path = "../base"}
device = {path = "../device"}
process = {path = "../process"}
