[package]
authors = ["Lance Hart <shipsimfan@hotmail.com>"]
edition = "2021"
name = "system_calls"
version = "0.1.0"

[lib]
bench = false
crate-type = ["lib"]
doc = false
doctest = false
name = "system_calls"
test = false

[dependencies]
base = {path = "../base"}
device = {path = "../device"}
filesystem = {path = "../filesystem"}
interrupts = {path = "../interrupts"}
ipc = {path = "../ipc"}
memory = {path = "../memory"}
process = {path = "../process"}
process_types = {path = "../process_types"}
program_loader = {path = "../program_loader"}
sessions = {path = "../sessions"}
time = {path = "../time"}
