[package]
authors = ["Lance Hart <shipsimfan@hotmail.com>"]
edition = "2021"
name = "log"
version = "0.1.0"

[lib]
bench = false
crate-type = ["lib"]
doc = false
doctest = false
name = "log"
test = false

[dependencies]
error = { workspace = true }
io = { workspace = true }
local_state = {workspace = true}