[package]
authors = ["Lance Hart <shipsimfan@hotmail.com>"]
edition = "2021"
name = "uefi"
version = "0.1.0"

[lib]
bench = false
crate-type = ["lib"]
doc = false
doctest = false
name = "uefi"
test = false

[dependencies]
base = {path = "../../base"}
device = {path = "../../device"}
memory = {path = "../../memory"}
process = {path = "../../process"}
sessions = {path = "../../sessions"}
