[package]
authors = ["Lance Hart <shipsimfan@hotmail.com>"]
build = "build.rs"
edition = "2021"
name = "local_state"
version = "0.1.0"

[lib]
bench = false
crate-type = ["lib"]
doc = false
doctest = false
name = "local_state"
test = false

[dependencies]
critical = { workspace = true }
global_state = { workspace = true }
